force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/MUSW__List_View_Board_Setting__mdt.object-meta.xml
<CustomObject>
    <label>List View Board Setting</label>
    <pluralLabel>List View Board Settings</pluralLabel>
</CustomObject>