force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/fields/MUSW__Default_Sort_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_Sort_Field_API_Name__c</fullName>
    <label>Default Sort Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>