force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/fields/MUSW__Default_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Default_Sort_Order__c</fullName>
    <label>Default Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>