force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/fields/MUSW__Geolocation_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Geolocation_Field_API_Name__c</fullName>
    <description>The field API name on the object is used to display list view records on a map based on latitude and longitude values.</description>
    <inlineHelpText>The Geolocation Field API Name only supports the following field data type: Geolocation.</inlineHelpText>
    <label>Geolocation Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>