force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/fields/MUSW__GIS_Map_Setting__c.field-meta.xml
<CustomField>
    <fullName>MUSW__GIS_Map_Setting__c</fullName>
    <description>Lookup relationship to the existing GIS Map Setting Custom Metadata Type</description>
    <inlineHelpText>The GIS Map Setting Custom Metadata Type is where MapViewer configuration is defined.</inlineHelpText>
    <label>GIS Map Setting</label>
    <referenceTo>MUSW__GIS_Map_Setting__mdt</referenceTo>
    <relationshipLabel>List View Board Settings</relationshipLabel>
    <relationshipName>List_View_Board_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>