force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/fields/MUSW__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>