force-app/main/default/objects/MUSW__List_View_Board_Setting__mdt/fields/MUSW__Swimlane_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Swimlane_Field_API_Name__c</fullName>
    <description>The field API name on the object is used to group list view records in swimlanes.</description>
    <inlineHelpText>The Swimlane Field API Name supports the following field data types: Date and Date/Time.</inlineHelpText>
    <label>Swimlane Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>